# newsletter-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
