[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Victor <victor.as.nascimento@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
config = "0.10.1"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
uuid = {version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

